# noisette

./: Cargo.toml  README.md  build.rs  index.html  rust-toolchain.toml
assets/: manifest.json  sw.js
src/: app.rs  helpers.rs  icons.rs  lib.rs  main.rs  sound.rs  utils.rs
src/audio/: desktop.rs  interface.rs  mod.rs  web.rs
src/shortcut/: desktop.rs  interface.rs  keycodes.rs  mod.rs  web.rs
src/widgets/: mod.rs  settings.rs  shortcut.rs
src/widgets/shortcut/: desktop.rs  mod.rs  web.rs
